--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css-reset.css') }}">
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css-reset.css') }}"
+/>
 <title>Hello from Flask</title>
 {% if person %}
 <h1>Hello {{ person }}!</h1>
