--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -1,3 +1,5 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} {% block header %}
+<h1>This is the articles header</h1>
+{% endblock %} {% block content %}
 <h1>This is the articles page</h1>
 {% endblock %}
