--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -11,13 +11,28 @@
       type="text/css"
       href="{{ url_for('static', filename='css-reset.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='main.css') }}"
+    />
   </head>
 
   <body>
     <header>
-      <h1>This is the header</h1>
+      {% block header %}
+      <div class="header-item">
+        <h2>Home</h2>
+      </div>
+      <div class="header-item">
+        <h2>Articles</h2>
+      </div>
+      <div class="header-item">
+        <h2>Visualisations</h2>
+      </div>
+      {% endblock %}
     </header>
-    <div>{% block content %}{% endblock %}</div>
+    <article>{% block content %}{% endblock %}</article>
     <footer>
       <h1>This is the footer</h1>
     </footer>
