--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -1,8 +1,16 @@
+body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem;
+}
+
 header {
   display: flex;
+  gap: 5px;
 }
 
 .header-item {
   padding: 5px;
-  margin: 5px;
+  border: 1px solid #999;
 }
