--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -1,5 +1,9 @@
-{% extends "layout.html" %} {% block header %}
-<h1>This is the articles header</h1>
-{% endblock %} {% block content %}
-<h1>This is the articles page</h1>
+{% extends "layout.j2" %}
+{% block header_articles %}
+  <div class="header__item header__item--active">
+    <h2><a href="/articles/">Articles</a></h2>
+  </div>
+{% endblock %}
+{% block content %}
+  <h1>This is the articles page</h1>
 {% endblock %}
