--- a/flaskr/templates/visualisations.html
+++ b/flaskr/templates/visualisations.html
@@ -1,3 +1,9 @@
-{% extends "layout.html" %} {% block content %}
-<h1>This is the visualisations page</h1>
+{% extends "layout.j2" %}
+{% block header_visualisations %}
+  <div class="header__item header__item--active">
+    <h2><a href="/visualisations/">Visualisations</a></h2>
+  </div>
+{% endblock %}
+{% block content %}
+  <h1>This is the visualisations page</h1>
 {% endblock %}
