--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -1,4 +1,4 @@
-{% extends "layout.j2" %}
+{% extends "layout.html" %}
 {% block header_articles %}
   <div class="header__item header__item--active">
     <h2><a href="/articles/">Articles</a></h2>
