--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "layout.j2" %}
+{% extends "layout.html" %}
 {% block header_home %}
   <div class="header__item header__item--active">
     <h2><a href="/">Home</a></h2>
