--- a/flaskr/templates/visualisations.html
+++ b/flaskr/templates/visualisations.html
@@ -1,4 +1,4 @@
-{% extends "layout.j2" %}
+{% extends "layout.html" %}
 {% block header_visualisations %}
   <div class="header__item header__item--active">
     <h2><a href="/visualisations/">Visualisations</a></h2>
