Lots of stuff added Basic layout and spacing and sizing Assets build in flask

--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block header_articles %}
-  <div class="header__item header__item--active">
-    <h2><a href="/articles/">Articles</a></h2>
-  </div>
+  <a class="header__item header__item--active" href="/articles/">Articles</a>
 {% endblock %}
 {% block content %}
   <h1>This is the articles page</h1>
