--- a/flaskr/templates/visualisations.html
+++ b/flaskr/templates/visualisations.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block header_visualisations %}
-  <div class="header__item header__item--active">
-    <h2><a href="/visualisations/">Visualisations</a></h2>
-  </div>
+  <a class="header__item header__item--active" href="/visualisations/"
+    >Visualisations</a
+  >
 {% endblock %}
 {% block content %}
   <h1>This is the visualisations page</h1>
