--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -1,10 +1,3 @@
-body {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: 1rem;
-}
-
 /* || Typography */
 
 /* https://rsms.me/inter/ */
@@ -22,18 +15,75 @@ body {
   }
 }
 
+/* || Fonts and spacing */
+
+h1 {
+  font-size: var(--size-big);
+  line-height: calc(var(--size-big) * 1.1);
+  margin-block-end: var(--spacing-three);
+  letter-spacing: var(--spacing-three-letter);
+}
+
+h2 {
+  font-size: var(--size-normal);
+  font-weight: var(--weight-heavy);
+  line-height: calc(var(--size-normal) * 1.2);
+  color: var(--color-sub-header);
+  margin-block-end: var(--spacing-two);
+  letter-spacing: var(--spacing-one-letter);
+}
+
+p {
+  font-size: var(--size-normal);
+  line-height: calc(var(--size-normal) * 1.25);
+  color: var(--color-text);
+  margin-block-end: var(--spacing-one);
+  letter-spacing: var(--spacing-one-letter);
+  max-width: 60ch;
+  text-wrap: balance;
+}
+
+a {
+  font-size: var(--size-normal);
+  font-weight: var(--weight-heavy);
+  color: var(--color-link);
+  letter-spacing: var(--spacing-one-letter);
+}
+
+a:visited {
+  color: var(--color-link-visited);
+}
+
+/* || General */
+
+/* using flex to define some spacing... 
+ * just testing...
+*/
+body {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-three);
+  margin: var(--spacing-three);
+  background: var(--color-background);
+}
+
 /* || Header and Main Naviagtion */
 
 header {
-  display: flex;
-  gap: 5px;
+  display: inline-grid;
+  grid-template-columns: min-content min-content min-content;
+  grid-gap: 5px;
 }
 
 .header__item {
   padding: 5px;
   border: 1px solid #999;
+  width: 120px;
+  min-width: fit-content;
+  text-align: center;
 }
 
 .header__item--active {
-  border-color: lab(87.6 125 104);
+  border-color: var(--color-selected);
+  border-width: 2px;
 }
