--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -3,56 +3,65 @@
 /* https://rsms.me/inter/ */
 
 :root {
-  font-family: Inter, sans-serif;
-  font-feature-settings:
-    "liga" 1,
-    "calt" 1; /* fix for Chrome */
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 @supports (font-variation-settings: light) {
   :root {
-    font-family: InterVariable, sans-serif;
+    font-family: "Urbanist", sans-serif;
   }
 }
 
 /* || Fonts and spacing */
 
 h1 {
-  font-size: var(--size-big);
-  line-height: calc(var(--size-big) * 1.1);
+  font-size: var(--font-size-big);
+  line-height: calc(var(--font-size-big) * 1.1);
   margin-block-end: var(--spacing-three);
   letter-spacing: var(--spacing-three-letter);
+  font-family: "Jost";
 }
 
 h2 {
-  font-size: var(--size-normal);
+  font-size: var(--font-size-normal);
   font-weight: var(--weight-heavy);
-  line-height: calc(var(--size-normal) * 1.2);
+  line-height: calc(var(--font-size-normal) * 1.25);
   color: var(--color-sub-header);
   margin-block-end: var(--spacing-two);
   letter-spacing: var(--spacing-one-letter);
+  font-family: "Jost";
 }
 
 p {
-  font-size: var(--size-normal);
-  line-height: calc(var(--size-normal) * 1.25);
+  font-size: var(--font-size-normal);
+  line-height: calc(var(--font-size-normal) * 1.3);
   color: var(--color-text);
   margin-block-end: var(--spacing-one);
   letter-spacing: var(--spacing-one-letter);
-  max-width: 60ch;
+  max-width: 70ch;
   text-wrap: balance;
 }
 
+p::first-letter {
+  font-size: calc(var(--font-size-normal) * 1.5);
+  font-weight: var(--weight-heavy);
+  color: brown;
+}
+
 a {
-  font-size: var(--size-normal);
+  font-size: var(--font-size-normal);
   font-weight: var(--weight-heavy);
   color: var(--color-link);
   letter-spacing: var(--spacing-one-letter);
 }
 
+/*
 a:visited {
   color: var(--color-link-visited);
 }
+*/
 
 /* || General */
 
@@ -63,27 +72,35 @@ body {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-three);
-  margin: var(--spacing-three);
+  margin-inline-start: calc(var(--spacing-three) + calc(var(--slope) * 9));
+  margin-inline-end: calc(var(--spacing-three) * 1);
+  margin-block-start: calc(var(--spacing-three) * 1);
   background: var(--color-background);
 }
 
 /* || Header and Main Naviagtion */
 
+/*
 header {
   display: inline-grid;
   grid-template-columns: min-content min-content min-content;
   grid-gap: 5px;
 }
+*/
 
 .header__item {
-  padding: 5px;
-  border: 1px solid #999;
-  width: 120px;
-  min-width: fit-content;
-  text-align: center;
+  padding: var(--spacing-one);
+  text-underline-offset: 25%;
+  text-decoration-thickness: 10%;
+  color: var(--color-link-header);
+}
+
+.header__item:first-child {
+  padding-inline-start: 0;
 }
 
 .header__item--active {
-  border-color: var(--color-selected);
-  border-width: 2px;
+  text-decoration-color: var(--color-link-header-active);
+  text-decoration-style: double;
+  color: var(--color-link-header-active);
 }
