--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Decio's web</title>
-    <link rel="preconnect" href="https://rsms.me/" />
+    <!--link rel="preconnect" href="https://rsms.me/" />-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://indestructibletype.com/fonts/Jost.css"
+      type="text/css"
+      charset="utf-8"
+    />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     {% assets "css_all" %}
       <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
