--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -17,17 +17,17 @@
 /* || Fonts and spacing */
 
 h1 {
-  font-size: var(--font-size-big);
-  line-height: calc(var(--font-size-big) * 1.1);
+  font-size: var(--fluid-l);
+  line-height: calc(var(--fluid-l) * 1.1);
   margin-block-end: var(--spacing-three);
   letter-spacing: var(--spacing-three-letter);
   font-family: "Jost";
 }
 
 h2 {
-  font-size: var(--font-size-normal);
+  font-size: var(--fluid-s);
   font-weight: var(--weight-heavy);
-  line-height: calc(var(--font-size-normal) * 1.25);
+  line-height: calc(var(--fluid-m) * 1.25);
   color: var(--color-sub-header);
   margin-block-end: var(--spacing-two);
   letter-spacing: var(--spacing-one-letter);
@@ -35,8 +35,8 @@ h2 {
 }
 
 p {
-  font-size: var(--font-size-normal);
-  line-height: calc(var(--font-size-normal) * 1.3);
+  font-size: var(--fluid-s);
+  line-height: calc(var(--fluid-s) * 1.3);
   color: var(--color-text);
   margin-block-end: var(--spacing-one);
   letter-spacing: var(--spacing-one-letter);
@@ -45,13 +45,13 @@ p {
 }
 
 p::first-letter {
-  font-size: calc(var(--font-size-normal) * 1.5);
+  font-size: var(--fluid-m);
   font-weight: var(--weight-heavy);
   color: brown;
 }
 
 a {
-  font-size: var(--font-size-normal);
+  font-size: var(--fluid-s);
   font-weight: var(--weight-heavy);
   color: var(--color-link);
   letter-spacing: var(--spacing-one-letter);
@@ -75,6 +75,7 @@ body {
   margin-inline-start: calc(var(--spacing-three) + calc(var(--slope) * 9));
   margin-inline-end: calc(var(--spacing-three) * 1);
   margin-block-start: calc(var(--spacing-three) * 1);
+  /* background: linear-gradient(var(--color-background), #4b6584); */
   background: var(--color-background);
 }
 
