--- a/flaskr/static/gen/packed.css
+++ b/flaskr/static/gen/packed.css
@@ -154,42 +154,62 @@ table {
   /* Fluid scaling, follows: 
    min + (max - min) * ((100vw - min-width) / (max-width - min-width)) */
 
-  --min-fs: 1;
-  --max-fs: 1.2;
-  --min-vw: 25;
-  --max-vw: 75;
+  /* --min-fs: 1; */
+  /* --max-fs: 1.2; */
+  /* --min-vw: 25; */
+  /* --max-vw: 75; */
+  /**/
+  /* --min-fs-rem: var(--min-fs) * 1rem; */
+  /* --max-fs-rem: var(--max-fs) * 1rem; */
+  /* --min-vw-rem: var(--min-vw) * 1rem; */
+  /**/
+  /* --slope: (var(--max-fs) - var(--min-fs)) * (100vw - var(--min-vw-rem)) / */
+  /*   (var(--max-vw) - var(--min-vw)); */
+  /**/
+  /* --base-size: clamp( */
+  /*   var(--min-fs-rem), */
+  /*   var(--min-fs-rem) + var(--slope), */
+  /*   var(--max-fs-rem) */
+  /* ); */
 
-  --min-fs-rem: var(--min-fs) * 1rem;
-  --max-fs-rem: var(--max-fs) * 1rem;
-  --min-vw-rem: var(--min-vw) * 1rem;
+  --xx-s: 0.381;
+  --x-s: 0.618;
+  --s: 1;
+  --m: 1.618;
+  --l: 2.617;
+  --x-l: 4.235;
+  --xx-l: 6.853;
 
-  --slope: (var(--max-fs) - var(--min-fs)) * (100vw - var(--min-vw-rem)) /
-    (var(--max-vw) - var(--min-vw));
+  /*https://fluid.style*/
+  /*x -> x * 1.333*/
+  --space-xx-s: clamp(0.381rem, 0.339rem + 0.21vw, 0.507rem);
+  --space-x-s: clamp(0.618rem, 0.55rem + 0.342vw, 0.823rem);
+  --space-s: clamp(1rem, 0.889rem + 0.555vw, 1.333rem);
+  --space-m: clamp(1.618rem, 1.439rem + 0.897vw, 2.156rem);
+  --space-l: clamp(2.617rem, 2.327rem + 1.452vw, 3.488rem);
+  --space-x-l: clamp(4.235rem, 3.765rem + 2.35vw, 5.645rem);
+  --space-xx-l: clamp(6.853rem, 6.092rem + 3.803vw, 9.135rem);
 
-  --base-size: clamp(
-    var(--min-fs-rem),
-    var(--min-fs-rem) + var(--slope),
-    var(--max-fs-rem)
-  );
+  --font-size-s: var(--space-s);
+  --font-size-m: var(--space-m);
+  --font-size-l: var(--space-l);
 
-  --font-size-normal: var(--base-size);
-  --font-size-big: calc(var(--base-size) * 3);
+  --spacing-letter-s: var(--space-x-s);
+  --spacing-letter-m: 0;
+  --spacing-letter-l: -var(--space-x-s);
 
   /* @link https://utopia.fyi/clamp/calculator?a=320,1400,16—32|25.8—51.7|41.7—83.6 */
 
-  --fluid-s: clamp(1rem, 0.7037rem + 1.4815vw, 2rem);
-  --fluid-m: clamp(1.6125rem, 1.1329rem + 2.3981vw, 3.2313rem);
-  --fluid-l: clamp(2.6063rem, 1.8303rem + 3.8796vw, 5.225rem);
+  /*--fluid-s: clamp(1rem, 0.7037rem + 1.4815vw, 2rem);*/
+  /*--fluid-m: clamp(1.6125rem, 1.1329rem + 2.3981vw, 3.2313rem);*/
+  /*--fluid-l: clamp(2.6063rem, 1.8303rem + 3.8796vw, 5.225rem);*/
 
   /* */
-  --spacing-one: calc(var(--base-size) * 0.5);
-  --spacing-two: calc(var(--base-size) * 1);
-  --spacing-three: calc(var(--base-size) * 1.5);
-
-  --spacing-letter-base: 0.0625rem;
-  --spacing-one-letter: var(--spacing-letter-base);
-  --spacing-two-letter: 0;
-  --spacing-three-letter: -var(--spacing-letter-base);
+  /* --spacing-one: calc(var(--base-size) * 0.5); */
+  /* --spacing-two: calc(var(--base-size) * 1); */
+  /* --spacing-three: calc(var(--base-size) * 1.5); */
+  /**/
+  /* --spacing-letter-base: 0.0625rem; */
 
   /* */
   --weight-heavy: 600;
@@ -211,86 +231,71 @@ table {
   }
 }
 
+/* || General */
+
+body {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: var(--space-l) 1fr var(--space-l);
+  row-gap: var(--space-m);
+  background: var(--color-background);
+  line-height: 1.618;
+}
 /* || Fonts and spacing */
 
 h1 {
-  font-size: var(--fluid-l);
-  line-height: calc(var(--fluid-l) * 1.1);
-  margin-block-end: var(--spacing-three);
-  letter-spacing: var(--spacing-three-letter);
+  font-size: var(--font-size-l);
+  margin-block-end: var(--space-m);
+  letter-spacing: var(--space-letter-l);
   font-family: "Jost";
+  outline: 2px solid;
 }
 
 h2 {
-  font-size: var(--fluid-s);
-  font-weight: var(--weight-heavy);
-  line-height: calc(var(--fluid-m) * 1.25);
+  font-size: var(--font-size-m);
+  margin-block-end: var(--space-x-s);
   color: var(--color-sub-header);
-  margin-block-end: var(--spacing-two);
-  letter-spacing: var(--spacing-one-letter);
+  letter-spacing: var(--space-letter-m);
   font-family: "Jost";
+  outline: 2px solid;
 }
 
 p {
-  font-size: var(--fluid-s);
-  line-height: calc(var(--fluid-s) * 1.3);
-  color: var(--color-text);
-  margin-block-end: var(--spacing-one);
-  letter-spacing: var(--spacing-one-letter);
+  font-size: var(--font-size-s);
+  margin-block-end: var(--space-x-s);
+  letter-spacing: var(--space-letter-s);
   max-width: 70ch;
   text-wrap: balance;
+  color: var(--color-text);
+  outline: 2px solid red;
 }
 
 p::first-letter {
-  font-size: var(--fluid-m);
+  font-size: var(--font-size-m);
   font-weight: var(--weight-heavy);
   color: brown;
 }
 
 a {
-  font-size: var(--fluid-s);
+  font-size: var(--font-size-s);
   font-weight: var(--weight-heavy);
   color: var(--color-link);
-  letter-spacing: var(--spacing-one-letter);
+  outline: 2px solid red;
 }
 
-/*
-a:visited {
-  color: var(--color-link-visited);
-}
-*/
-
-/* || General */
-
-/* using flex to define some spacing... 
- * just testing...
-*/
-body {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-three);
-  margin-inline-start: calc(var(--spacing-three) + calc(var(--slope) * 9));
-  margin-inline-end: calc(var(--spacing-three) * 1);
-  margin-block-start: calc(var(--spacing-three) * 1);
-  /* background: linear-gradient(var(--color-background), #4b6584); */
-  background: var(--color-background);
+header,
+footer {
+  grid-column: 2/8;
 }
 
-/* || Header and Main Naviagtion */
-
-/*
 header {
-  display: inline-grid;
-  grid-template-columns: min-content min-content min-content;
-  grid-gap: 5px;
+  margin-block-start: var(--space-s);
 }
-*/
 
 .header__item {
-  padding: var(--spacing-one);
-  text-underline-offset: 25%;
-  text-decoration-thickness: 10%;
+  padding: var(--space-m);
   color: var(--color-link-header);
+  text-decoration: none;
 }
 
 .header__item:first-child {
@@ -298,7 +303,13 @@ header {
 }
 
 .header__item--active {
+  text-decoration: underline;
+  text-underline-offset: 25%;
+  text-decoration-thickness: 10%;
   text-decoration-color: var(--color-link-header-active);
-  text-decoration-style: double;
   color: var(--color-link-header-active);
+}
+
+article {
+  grid-column: 2/8;
 }
