--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -14,86 +14,71 @@
   }
 }
 
+/* || General */
+
+body {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: var(--space-l) 1fr var(--space-l);
+  row-gap: var(--space-m);
+  background: var(--color-background);
+  line-height: 1.618;
+}
 /* || Fonts and spacing */
 
 h1 {
-  font-size: var(--fluid-l);
-  line-height: calc(var(--fluid-l) * 1.1);
-  margin-block-end: var(--spacing-three);
-  letter-spacing: var(--spacing-three-letter);
+  font-size: var(--font-size-l);
+  margin-block-end: var(--space-m);
+  letter-spacing: var(--space-letter-l);
   font-family: "Jost";
+  outline: 2px solid;
 }
 
 h2 {
-  font-size: var(--fluid-s);
-  font-weight: var(--weight-heavy);
-  line-height: calc(var(--fluid-m) * 1.25);
+  font-size: var(--font-size-m);
+  margin-block-end: var(--space-x-s);
   color: var(--color-sub-header);
-  margin-block-end: var(--spacing-two);
-  letter-spacing: var(--spacing-one-letter);
+  letter-spacing: var(--space-letter-m);
   font-family: "Jost";
+  outline: 2px solid;
 }
 
 p {
-  font-size: var(--fluid-s);
-  line-height: calc(var(--fluid-s) * 1.3);
-  color: var(--color-text);
-  margin-block-end: var(--spacing-one);
-  letter-spacing: var(--spacing-one-letter);
+  font-size: var(--font-size-s);
+  margin-block-end: var(--space-x-s);
+  letter-spacing: var(--space-letter-s);
   max-width: 70ch;
   text-wrap: balance;
+  color: var(--color-text);
+  outline: 2px solid red;
 }
 
 p::first-letter {
-  font-size: var(--fluid-m);
+  font-size: var(--font-size-m);
   font-weight: var(--weight-heavy);
   color: brown;
 }
 
 a {
-  font-size: var(--fluid-s);
+  font-size: var(--font-size-s);
   font-weight: var(--weight-heavy);
   color: var(--color-link);
-  letter-spacing: var(--spacing-one-letter);
+  outline: 2px solid red;
 }
 
-/*
-a:visited {
-  color: var(--color-link-visited);
-}
-*/
-
-/* || General */
-
-/* using flex to define some spacing... 
- * just testing...
-*/
-body {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-three);
-  margin-inline-start: calc(var(--spacing-three) + calc(var(--slope) * 9));
-  margin-inline-end: calc(var(--spacing-three) * 1);
-  margin-block-start: calc(var(--spacing-three) * 1);
-  /* background: linear-gradient(var(--color-background), #4b6584); */
-  background: var(--color-background);
+header,
+footer {
+  grid-column: 2/8;
 }
 
-/* || Header and Main Naviagtion */
-
-/*
 header {
-  display: inline-grid;
-  grid-template-columns: min-content min-content min-content;
-  grid-gap: 5px;
+  margin-block-start: var(--space-s);
 }
-*/
 
 .header__item {
-  padding: var(--spacing-one);
-  text-underline-offset: 25%;
-  text-decoration-thickness: 10%;
+  padding: var(--space-m);
   color: var(--color-link-header);
+  text-decoration: none;
 }
 
 .header__item:first-child {
@@ -101,7 +86,13 @@ header {
 }
 
 .header__item--active {
+  text-decoration: underline;
+  text-underline-offset: 25%;
+  text-decoration-thickness: 10%;
   text-decoration-color: var(--color-link-header-active);
-  text-decoration-style: double;
   color: var(--color-link-header-active);
+}
+
+article {
+  grid-column: 2/8;
 }
