--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -18,8 +18,9 @@
 
 body {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: var(--space-l) 1fr var(--space-l);
+  /* grid-template-columns: 1fr repeat(8, minmax(0, calc(70ch / 8))) 1.618fr; */
+  grid-template-columns: 1fr minmax(0, 70ch) 1.618fr;
+  grid-template-rows: auto 1fr auto;
   row-gap: var(--space-m);
   background: var(--color-background);
   line-height: 1.618;
@@ -27,30 +28,31 @@ body {
 /* || Fonts and spacing */
 
 h1 {
+  font-family: "Jost";
   font-size: var(--font-size-l);
   margin-block-end: var(--space-m);
   letter-spacing: var(--space-letter-l);
-  font-family: "Jost";
-  outline: 2px solid;
+  /*outline: 2px solid;*/
 }
 
 h2 {
-  font-size: var(--font-size-m);
-  margin-block-end: var(--space-x-s);
-  color: var(--color-sub-header);
-  letter-spacing: var(--space-letter-m);
   font-family: "Jost";
-  outline: 2px solid;
+  font-size: var(--font-size-s);
+  font-weight: var(--weight-heavy);
+  margin-block-end: var(--space-x-s);
+  letter-spacing: var(--space-letter-m);
+  color: var(--color-sub-header);
+  /*outline: 2px solid;*/
 }
 
 p {
   font-size: var(--font-size-s);
   margin-block-end: var(--space-x-s);
   letter-spacing: var(--space-letter-s);
-  max-width: 70ch;
+  /* max-width: 70ch; */
   text-wrap: balance;
   color: var(--color-text);
-  outline: 2px solid red;
+  /*outline: 2px solid red;*/
 }
 
 p::first-letter {
@@ -63,27 +65,33 @@ a {
   font-size: var(--font-size-s);
   font-weight: var(--weight-heavy);
   color: var(--color-link);
-  outline: 2px solid red;
+  /*outline: 2px solid red;*/
 }
 
 header,
 footer {
-  grid-column: 2/8;
+  grid-column-start: 2;
 }
 
 header {
-  margin-block-start: var(--space-s);
+  font-family: "Jost";
+  display: flex;
+  gap: var(--space-s);
+  flex-wrap: nowrap;
+  /*margin-block-start: var(--space-s);*/
+  /* outline: 1px solid blueviolet; */
 }
 
 .header__item {
-  padding: var(--space-m);
+  /*padding: var(--space-x-s);*/
   color: var(--color-link-header);
   text-decoration: none;
+  /* outline: 2px dotted red; */
 }
 
-.header__item:first-child {
-  padding-inline-start: 0;
-}
+/*.header__item:first-child {*/
+/*padding-inline-start: 0;*/
+/*}*/
 
 .header__item--active {
   text-decoration: underline;
@@ -94,5 +102,5 @@ header {
 }
 
 article {
-  grid-column: 2/8;
+  grid-column-start: 2;
 }
