--- a/flaskr/static/css-reset.css
+++ b/flaskr/static/css-reset.css
@@ -92,6 +92,16 @@ video {
   vertical-align: baseline;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -113,7 +123,7 @@ body {
 
 ol,
 ul {
-  list-style: none;
+  list-style: "";
 }
 
 blockquote,
