--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -3,5 +3,5 @@
   <a class="header__item header__item--active" href="/articles/">Articles</a>
 {% endblock %}
 {% block content %}
-  <h1>This is the articles page</h1>
+  <h1>Articles...</h1>
 {% endblock %}
