--- a/flaskr/static/main.css
+++ b/flaskr/static/main.css
@@ -20,11 +20,12 @@ body {
   display: grid;
   /* grid-template-columns: 1fr repeat(8, minmax(0, calc(70ch / 8))) 1.618fr; */
   grid-template-columns: 1fr minmax(0, 70ch) 1.618fr;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr var(--space-l);
   row-gap: var(--space-m);
   background: var(--color-background);
-  line-height: 1.618;
+  line-height: var(--m);
 }
+
 /* || Fonts and spacing */
 
 h1 {
@@ -32,6 +33,8 @@ h1 {
   font-size: var(--font-size-l);
   margin-block-end: var(--space-m);
   letter-spacing: var(--space-letter-l);
+  line-height: var(--s);
+  max-width: 20ch;
   /*outline: 2px solid;*/
 }
 
@@ -58,7 +61,11 @@ p {
 p::first-letter {
   font-size: var(--font-size-m);
   font-weight: var(--weight-heavy);
-  color: brown;
+  color: var(--color-popout);
+}
+
+p::first-line {
+  line-height: var(--s);
 }
 
 a {
@@ -76,8 +83,8 @@ footer {
 header {
   font-family: "Jost";
   display: flex;
-  gap: var(--space-s);
-  flex-wrap: nowrap;
+  gap: var(--space-xx-s) var(--space-s);
+  flex-wrap: wrap;
   /*margin-block-start: var(--space-s);*/
   /* outline: 1px solid blueviolet; */
 }
@@ -103,4 +110,9 @@ header {
 
 article {
   grid-column-start: 2;
+}
+
+.icons img {
+  width: var(--space-m);
+  height: var(--space-m);
 }
