non consecuential changes, just giving a kick to the build ;)

--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -50,7 +50,7 @@
           <a rel="me" href="https://github.com/deciob">
             <img
               src="{{ url_for('static', filename='github-mark.png') }}"
-              alt="GitHub"
+              alt="github"
           /></a>
         </li>
       </ul>
