--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -5,5 +5,5 @@
 {% block content %}
   <h1>Decio's Web</h1>
   <h2>wip</h2>
-  <p>This is work in progress ;)</p>
+  <p>This is work in progress...</p>
 {% endblock %}
