--- a/flaskr/static/typography.css
+++ b/flaskr/static/typography.css
@@ -16,21 +16,23 @@ body {
   margin-block-start: var(--space-s);
 }
 
-header,
-footer,
-article {
+.main-block {
   margin-inline-start: var(--space-s);
   margin-inline-end: var(--space-s);
 }
 
-header {
-  font-family: "Jost", sans-serif;
+header.main-block {
   font-optical-sizing: auto;
   font-style: normal;
 }
 
+header.main-block,
+h1,
+h2 {
+  font-family: "Jost", sans-serif;
+}
+
 h1 {
-  font-family: "Jost";
   font-size: var(--font-size-l);
   margin-block-end: var(--space-m);
   letter-spacing: var(--space-letter-l);
@@ -41,7 +43,6 @@ h1 {
 }
 
 h2 {
-  font-family: "Jost";
   font-size: var(--font-size-s);
   font-weight: var(--weight-heavy);
   margin-block-end: var(--space-x-s);
@@ -97,4 +98,8 @@ a {
   text-decoration-thickness: 10%;
   text-decoration-color: var(--color-link-header-active);
   color: var(--color-link-header-active);
+}
+
+em {
+  font-style: italic;
 }
