--- a/flaskr/templates/articles.html
+++ b/flaskr/templates/articles.html
@@ -1,7 +1,15 @@
 {% extends "layout.html" %}
 {% block header_articles %}
-  <a class="header__item header__item--active" href="/articles/">Articles</a>
+  <a
+    class="header__item header__item--active"
+    href="{{ url_for('articles.articles') }}"
+    >Articles</a
+  >
 {% endblock %}
 {% block content %}
-  <h1>Articles...</h1>
+  <ul class="list-style--visible">
+    <li>
+      <a href="{{ url_for('article.article', article=1) }}">CSS Layouts</a>
+    </li>
+  </ul>
 {% endblock %}
