--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -55,5 +55,12 @@
         </li>
       </ul>
     </footer>
+    <div class="viz">
+      <div>
+        <div class="viz__circle viz__circle-1"></div>
+        <div class="viz__circle viz__circle-2"></div>
+        <div class="viz__circle viz__circle-3"></div>
+      </div>
+    </div>
   </body>
 </html>
