--- a/flaskr/static/shared-values.css
+++ b/flaskr/static/shared-values.css
@@ -3,7 +3,9 @@
 :root {
   /* colors */
 
-  --color-background: #e9e8e6;
+  --color-background: lch(92% 1.1 85.61);
+  --color-background-d: lch(80% 1.1 85.61);
+  --color-background-l: lch(94% 1.1 85.61);
   --color-primary: lch(56 77 44.93);
   --color-secondary: lch(42 33 213.52);
 
